--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
-APP_URL=http://localhost
+APP_KEY=base64:oC41/ddKrxxhVywdELANC/3M7Mzvuu/Ygy1nmLKTook=
+APP_URL=https://prestami.herokuapp.com
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=id173580_prestami
+DB_USERNAME=taverasady
+DB_PASSWORD=sshell2k10
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
